# jane_kaggle

./: README.md  frozen_requirements.txt  pyproject.toml  requirements.txt
.dvc/: config
.ipynb_checkpoints/: pyproject-checkpoint.toml
Data/: .gitignore
Data/Processed/: .gitignore  Regressionalize.parquet  Regressionalize_second_train.parquet.REMOVED.git-id  Regressionalize_secondary_train.parquet
Models/Diff/: .gitignore
Models/Lag/: .gitignore
Models/Regressionalize/: .gitignore
Notebooks/: ARIMA.ipynb  Predict.ipynb  exploration.ipynb  feature_exploration.ipynb  tertiary_models.ipynb
Pipeline_Yamls/: dvc.yaml  params.yaml
Pipeline_Yamls/.ipynb_checkpoints/: dvc-checkpoint.yaml  params-checkpoint.yaml
Scripts/Metrics/: Scatter.py  Weighted_R.py
Scripts/Model_Test/: LinearRegressor.py  LinearRegressor_forward-Copy1.py  LinearRegressor_forward.py  PytorchNeuralNetworkRegressor.py  PytorchNeuralNetworkRegressor_forward-Copy1.py  PytorchNeuralNetworkRegressor_forward.py  stacked_LinearRegressor_forward.py  stacked_PytorchNeuralNetworkRegressor_forward.py
Scripts/Model_Train/: LinearRegressor.py  LinearRegressor_Diff.py  PytorchNeuralNetworkRegressor.py  PytorchNeuralNetworkRegressor_Diff.py  secondary_LinearRegressor.py  secondary_PytorchNeuralNetworkRegressor.py  stacked_LinearRegressor.py  stacked_PytorchNeuralNetworkRegressor.py
Scripts/Processors/: ARIMA.py  Custom_Transform.py  Custom_Transform_Three_Diffs.py  Diff.py  Feature_Properties.py  Lag.py  Regressionalize.py
jane_kaggle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+44 files in other folders)
